refactor: 重构视频控制器以使用Sa-Token进行认证并简化请求处理 - 更新VideoController，移除HttpServletRequest依赖并使用StpUtil进行用户认证 - 修改VideoDanmuController，用SaCheckLogin注解替换GlobalInterceptor实现登录检查 - 重构VideoPlayHistoryController，消除HttpServletRequest使用并通过StpUtil实现用户标识 - 增强application.yml，添加Sa-Token配置项用于令牌管理 - 优化logback-spring.xml，提升日志结构并增加错误日志记录能力